objects/kugo2p__Warehouse__c.object
<CustomObject>
    <description>Kugamon - Related object to Kugamon Settings to store Warehouse locations. For Admin use only.</description>
    <fields>
        <fullName>kugo2p__Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__KugamonSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kugamon Setting</label>
        <referenceTo>kugo2p__KugamonSetting__c</referenceTo>
        <relationshipLabel>Warehouses</relationshipLabel>
        <relationshipName>Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__WarehouseCity__c</fullName>
        <label>Warehouse City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__WarehouseCountry__c</fullName>
        <label>Warehouse Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__WarehouseStateProvince__c</fullName>
        <label>Warehouse State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__WarehouseStreet__c</fullName>
        <label>Warehouse Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__WarehouseZipPostalCode__c</fullName>
        <label>Warehouse Zip/Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Warehouse</label>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>